2005-03-28  James E Wilson  <wilson@specifixinc.com>

	PR target/20286.
	* config/ia64/ia64.c (ia64_encode_section_info): Only abort if encoding
	or symbol_str[1] is 's'.

2005-02-23  Michael Beach  <michaelb@ieee.org>

	PR target/20159
	* config/sparc/t-elf (startup files): Assemble with CPP.

2005-02-11  John David Anglin  <dave.anglin@nrc-crnc.gc.ca>

        PR middle-end/19697
	2005-01-30  Roger Sayle  <roger@eyesopen.com>
        * config/pa/pa.md (anddi3, iordi3): On HPPA64, disallow an integer
        constant as the second operand and a register as the third.

2005-01-29  Alan Modra  <amodra@bigpond.net.au>

	* unwind-dw2.c (execute_stack_op): Add missing cases for
	DW_OP_shl, DW_OP_shr, DW_OP_shra, DW_OP_xor.

2005-01-28  Stephane Carrez  <stcarrez@nerim.fr>

	PR target/15384
	* config/m68hc11/t-m68hc11-gas (dp-bit.c): Fix typo causing a
	configuration part of dp-bit.c to be lost.

2005-01-27  Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/17771
	Backport from mainline:
	* config/s390/s390.md ("reload_outti"): Remove predicate for
	output operand.  Abort if operand is not a MEM.
	("reload_outdi", "reload_outdf"): Likewise.

2005-01-22  Roger Sayle  <roger@eyesopen.com>

	PR target/18402
	Backport from mainline
	2003-02-05  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/8555
 	* config/i386/i386.md (sse_mov?fcc split): Handle op2 == op3 case
 	instead of aborting.

2005-01-21  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	* gccbug.in: Update optimization -> tree-optimization/rtl-optimization.

2005-01-21  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/17115
	* tree-inline.c (expand_call_inline): Do not warn for functions
	marked with attribute noinline.

2005-01-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/19296
	* combine.c (simplify_comparison): Rewrite the condition under
	which a non-paradoxical SUBREG of a PLUS can be lifted when
	compared against a constant.

2004-01-14  David Mosberger  <davidm@hpl.hp.com>