@@ -1,3 +1,8 @@
+2005-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	PR c++/18644
+	* call.c (build_new_op): Remove check for warn_synth.
+
 2004-12-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/17456
