@@ -1,3 +1,8 @@
+2005-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	PR c++/18644
+	* doc/invoke.texi (-Wsynth): Remove documentation.
+
 2005-03-28  James E Wilson  <wilson@specifixinc.com>
 
 	PR target/20286.
